# batch_video_translation

./: .gitignore  SETUP_WINDOWS.md  pyproject.toml  readme.md  requirements.txt
configs/: settings_test.json  system_prompt_test.txt
src/: main.py
src/modules/: extractor.py  legacy_translator.py  llm_translator.py  srt_optimizer.py  transcriber.py  translator.py
src/modules/providers/: base_provider.py  copilot_ui.py  llama_provider.py
src/modules/strategies/: hybrid_refiner.py
src/utils/: file_handler.py  srt_handler.py
tests/: conftest.py  helpers.py  test_chunk_validation.py  test_engine_independence.py  test_extractor.py  test_file_handler.py  test_hybrid_refiner.py  test_legacy_translator.py  test_llm_provider.py  test_llm_translator.py  test_main_pipeline.py  test_srt_handler.py  test_srt_optimizer.py  test_transcriber.py  test_translator.py
