[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-translation-pipeline"
version = "0.2.0"
description = "Automated video transcription and translation pipeline with hybrid LLM arbitration"
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    # Translation & Text
    "deep-translator>=1.11",
    "regex>=2023.0",
    "requests>=2.28",
    "pyperclip>=1.8",
    # System
    "python-dotenv>=1.0",
    "tqdm>=4.60",
    # Windows-only (UI automation)
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "pywin32>=300; sys_platform == 'win32'",
    "pypiwin32>=223; sys_platform == 'win32'",
    "keyboard>=0.13; sys_platform == 'win32'",
    "mouse>=0.7; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pylint",
    "pytest",
    "pytest-cov",
    "pip-tools",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

# ── Ruff ────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src", "tests"]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator suggestion
    "B904",   # raise ... from ... inside except (noisy on legacy code)
]

[tool.ruff.lint.isort]
known-first-party = ["modules", "utils"]

# ── Pylint ──────────────────────────────────────────────────────────
[tool.pylint.main]
source-roots = ["src"]
ignore-paths = ["tests/__pycache__", "src/utils/__pycache__"]
extension-pkg-allow-list = ["win32api"]

[tool.pylint."messages control"]
disable = [
    "C0114",  # missing-module-docstring (not required by convention)
    "C0115",  # missing-class-docstring (enforced by convention, not pylint)
    "C0301",  # line-too-long (handled by ruff formatter)
    "W1203",  # logging-fstring-interpolation (acceptable in modern Python)
    "E0401",  # import-error (external deps not always installed in dev)
]

[tool.pylint.format]
max-line-length = 120

# ── Coverage ────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/__init__.py",
    "src/modules/providers/copilot_ui.py",  # UI automation, untestable in CI
]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
